--- a/src/css/default.css
+++ b/src/css/default.css
@@ -22,12 +22,11 @@
 }
 
 *::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
+  width: 4px;
 }
 
 *::-webkit-scrollbar-track {
-  background-color: whitesmoke;
+  background-color: rgb(184, 184, 184);
 }
 
 *::-webkit-scrollbar-thumb {
